background and LHS toolbar, static

--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  You’ve used 815 GB of your storage
+<img src="images/bg-desktop.png" alt="" class="bg-img">
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<div class="content">
+
+  <div class="content-common toolbar">
+    <div class="logo">
+      <img src="images/logo.svg" alt="" class="logo-img">
+    </div>
+
+    <div class="tools">
+      <div class="tools-bg">
+      <img src="images/icon-document.svg" alt="" class="tools-icons">
+      </div>
+      <div class="tools-bg">
+        <img src="images/icon-folder.svg" alt="" class="tools-icons">
+      </div>
+      <div class="tools-bg">
+        <img src="images/icon-upload.svg" alt="" class="tools-icons">
+      </div>
+    </div>
   </div>
+
+  <div class="content-common usage">
+  </div>
+</div>
+
+<!--
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://randomao.github.io/cv_site/">Mao Ruijia</a>.
+  </div>
+-->
 </body>
+
 </html>
