added usage bar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
   </div>
 
   <div class="content-common usage">
+    <p class="usage-text">You've used <strong>815 GB</strong> of your storage</p>
+    <div class="usage-bar-container">
+      <progress class="usage-bar" value="815" max="1000">815</progress>
+      <p class="usage-bar-text usage-bar-text-min"> 0 GB </p>
+      <p class="usage-bar-text usage-bar-text-max"> 1000 GB </p>
+    </div>
   </div>
 </div>
 
